<resources>
    <string name="app_name">CashTracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_sort">Sort</string>
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="choose_account">Оберіть акаунт</string>
    <string name="choose_currency">Оберіть курс</string>

    <string name="cost">10000.25</string>
    <string name="date_value">12/11/2001</string>
    <string name="remainder_of_budget">Залишок:</string>

    <string name="money_income">Прибуток</string>
    <string name="spending_of_money">Витрата</string>
    <string name="money_transfer">Переказ</string>
    <string name="move">Перенесення</string>

    <string name="sum_of_transfer">Сума переказу</string>

    <string name="comment">Коментар</string>

    <string name="role_owner">Роль власника</string>

    <string name="date">Дата</string>
    <string name="account">Рахунок</string>
    <string name="category">Категорія</string>
    <string name="sum">Сума</string>
    <string name="details">Подробиці</string>
    <string name="enter_date">Вкажіть дату</string>
    <string name="enter_details">Вкажіть подробиці</string>

    <!-- Диалог выбора даты -->
    <string name="today">Сьогодні</string>
    <string name="one_week">1 неділя</string>
    <string name="one_month">1 місяць</string>
    <string name="one_year">1 рік</string>
    <string name="сhoose_day">Оберіть день</string>
    <string name="date_range">Діапазон дат</string>
    <string name="all_time">Весь час</string>
    <string name="select_date_or_time_interval">Вибір дати чи інтервал часу</string>
    <string name="choose_time_interval">Оберіть часовий інтервал</string>

    <string name="big_test_text">Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam netus maecenas, a suscipit facilisis sociosqu erat placerat hendrerit senectus. Nisi primis sagittis feugiat taciti placerat tincidunt massa ante eros nibh sollicitudin, faucibus diam proin consequat varius nascetur aenean id fringilla phasellus. Euismod nunc convallis gravida magnis ridiculus metus mi eros egestas vehicula erat rutrum maecenas a massa pellentesque maximus, justo cras placerat viverra nisl lobortis sodales montes finibus per litora sem pretium efficitur pulvinar.</string>


    <string name="label_income">Прибутки</string>
    <string name="label_expense">Витрати</string>
    <string name="label_debts">Борги</string>
    <string name="label_budget">Бюджет</string>

    <string name="success_delete">Успішне видалення</string>
    <string name="delete_income">Успішне видалення прибутку</string>
    <string name="delete_account">Успішне видалення рахунку</string>
    <string name="delete_expense">Успішне видалення витрати</string>
    <string name="delete_debts">Успішне видалення боргу</string>
    <string name="delete_budget">Успішне видалення бюджету</string>
    <string name="delete_pay_debt">Успішне видалення оплати боргу</string>
    <string name="undo">Відновити?</string>
    <string name="duplicate">Дублювати</string>
    <string name="yes">Так!</string>

    <string name="i">Я</string>
    <string name="me">Мені</string>

        <string name="label_active_debt">Активні борги</string>
        <string name="label_all_debt">Всі борги</string>
        <string name="label_empty_debts">Відсутні борги...</string>
    <!--    <string name="label_"></string>-->
    <!--    <string name="label_"></string>-->


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="save">Зберегти</string>
    <string name="cancel">Відміна</string>
    <string name="enter_debt">Внесена сума</string>
    <string name="balance_of_debt">Поточний борг</string>
    <string name="pay_debt">Сплата боргу</string>
    <string name="categories">Категорії</string>

    <!-- Диалог категорий -->
    <string name="enter_category">Вкажіть назву категорії</string>


    <string name="label_income_add">Додати прибуток</string>
    <string name="label_expense_add">Додати витрату</string>
    <string name="label_budget_add">Додати бюджет</string>
    <string name="label_debt_add">Додати борг</string>
    <string name="label_income_edit">Редагування прибутку</string>
    <string name="label_expense_edit">Редагування витрати</string>
    <string name="label_budget_edit">Редагування бюджету</string>
    <string name="label_debt_edit">Редагування боргу</string>
    <string name="label_add_income_category">Створення категорії прибутку</string>
    <string name="label_add_expense_category">Створення категорії витрати</string>
    <string name="label_add_account">Створення рахунку</string>
    <string name="label_edit_income_category">Редагування категорії прибутку</string>
    <string name="label_edit_expense_category">Редагування категорії витрати</string>
    <string name="label_edit_account">Редагування рахунку</string>
    <string name="label_edit_contribution">Редагування сплати боргу</string>
    <string name="label_add_contribution">Сплата боргу</string>


    <string name="success_insert_income">Успішна реєстрація прибутку</string>
    <string name="success_insert_expense">Успішна реєстрація витрати</string>
    <string name="success_insert_debt">Успішна реєстрація боргу</string>
    <string name="success_insert_budget">Успішна реєстрація бюджету</string>
    <string name="success_insert_pay_to_debt">Успішна реєстрація оплати по боргу, залишок буде повернуто на рахунок</string>

    <!-- исключения -->
    <string name="value_more_than_balance">Вказана сума перевищує баланс!</string>
    <string name="value_is_negative">Вказана сума має бути додатною і більше 0!</string>
    <string name="date_in_future">Вказана дата досі не настала!</string>
    <string name="field_is_empty">Не вказано значення</string>
    <string name="date_is_empty">Не вказано дату операції!</string>
    <string name="category_is_empty">Не вказано категорію!</string>
    <string name="account_is_empty">Не вказано рахунок!</string>
    <string name="image_is_empty">Не вказано зображення!</string>
    <string name="category_exist_in_db">Категорія із такою назвою вже існує в БД!</string>
    <string name="account_exist_in_db">Рахунок із такою назвою вже існує в БД!</string>
    <string name="account_not_exist_in_db">Вказаний рахунок було втрачено, оберіть інший!</string>
    <string name="edited_note_losted">В процесі виконання було втрачено редагуємий запис!</string>
    <string name="names_debtor_and_creditor_equals">Ім\'я позикодавця та боржника не мають співпадати</string>
    <string name="currency_not_checked">Курс не вказано!</string>
    <string name="account_name_is_empty">Не вказано назву рахунку!</string>



    <string name="dialog_msg_process">Виконую обробку...</string>
    <string name="dialog_msg_add_expense">Додаю витрату...</string>
    <string name="dialog_msg_add_income">Додаю прибуток...</string>
    <string name="dialog_msg_add_category_income">Додаю категорію прибутку...</string>
    <string name="dialog_msg_add_category_expense">Додаю категорію витрати...</string>

    <string name="balance">Баланс</string>
    <string name="income_empty">Прибутки відсутні</string>
    <string name="expense_empty">Витрати відсутні</string>
    <string name="budget_empty">Відсутні бюджети</string>
    <string name="add_new_account">Додання рахунку</string>
    <string name="edit_account">Редагування рахунку</string>
    <string name="name_account">Назва рахунку</string>
    <string name="edit">Редагувати</string>
    <string name="delete">Видалити</string>

    <string name="incorrect_form_interval">Некоректна форма вказаного інтервалу дат</string>
    <string name="budget_date_conflict">Вказаний період конфліктує із деякими бюджетами цієї ж категорії</string>
    <string name="category_lost">Вказану категорію було втрачено</string>
    <string name="debtor">Боржник</string>
    <string name="creditor">Позикодавець</string>
    <string name="value">Значення</string>
    <string name="borrowed">Позичив</string>
    <string name="in_debt">Заборгував</string>
    <string name="use_pin_code">Використовувати захист паролем</string>
</resources>