<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    app:cardCornerRadius="16dp"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ui.screens.tabs.debt.dialog.payDebt.PayDebtDialog">

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/pay_debt"
        android:textColor="@color/black"
        android:textSize="22sp"/>

    <TextView
        android:id="@+id/tvSelectDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/date_value"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/llHeaderAccount"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/tvHeader1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_gravity="start"
            android:gravity="center"
            android:text="@string/account"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <Spinner
            android:id="@+id/spinnerAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilRemainderDebt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:enabled="false"
        android:textColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietRemainderDebt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/balance_of_debt"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="italic" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEnterDebt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:enabled="true"
        android:textColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietEnterDebt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_debt"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="italic" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/save" />
    </LinearLayout>

</LinearLayout>