<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.screens.account.dialogs.transfer.TransferBetweenAccountsDialog">

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/money_transfer"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:gravity="center"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/tvSelectDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/date_value"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:gravity="center"
        android:layout_gravity="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilSumOfTransfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietSumOfTransfer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sum_of_transfer"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="italic" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/comment"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="italic" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_gravity="center">

        <Spinner
            android:id="@+id/spinnerFromAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:rotationY="180"
            android:src="@drawable/arrow_back" />

        <Spinner
            android:id="@+id/spinnerToAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/save" />
    </LinearLayout>
</LinearLayout>