<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".ui.screens.category.dialogs.addEdit.AddEditCategoryDialog"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/label_add_expense_category"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:gravity="center"
        android:layout_gravity="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNameCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietNameCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_category"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="italic" />
    </com.google.android.material.textfield.TextInputLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="10dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCategoriesList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="5">

        </androidx.recyclerview.widget.RecyclerView>
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/save" />
    </LinearLayout>
</LinearLayout>