<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.screens.account.dialogs.addEdit.AddEditAccountDialog">


    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/add_new_account"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNameAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietNameAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_account"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="italic" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/llEnterValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilValueBalance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietValueBalance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/balance"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="italic" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spinnerCurrency"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvIconsList"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        android:padding="8dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="5" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/save" />
    </LinearLayout>

</LinearLayout>